# SayIt

./: .gitignore  CHANGELOG.md  CLAUDE.md  design.pen  index.html  main-window.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  voice-transcription-poc-spec.md
.github/workflows/: release.yml
_bmad-output/: project-context.md
_bmad-output/implementation-artifacts/: 1-2-rdev-cross-platform-hotkey.md  1-4-voice-record-transcribe-paste.md  1-5-hud-status-permission-guide.md  2-1-groq-llm-text-enhancement.md  2-2-ai-prompt-customization-context.md  2-3-paste-quality-monitoring.md  3-1-vocabulary-crud-interface.md  3-2-vocabulary-injection-whisper-ai.md  4-1-transcription-auto-save.md  4-2-history-browse-search-copy.md  4-3-dashboard-stats-recent-summary.md  4-4-recording-storage-history-playback.md  4-5-transcription-retry-from-disk.md  5-1-hotkey-settings-interface.md  5-2-autostart-auto-update.md  sprint-status.yaml  tech-spec-configurable-enhancement-threshold.md  tech-spec-esc-global-abort.md  tech-spec-multi-monitor-hud-tracking.md  tech-spec-smart-dictionary-learning.md
scripts/: release.sh
src/: App.vue  MainApp.vue  main-window.ts  router.ts  style.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/plugins/: audio_control.rs  audio_recorder.rs  clipboard_paste.rs  fn_key_listener.rs  hotkey_listener.rs  keyboard_monitor.rs  mod.rs  sound_feedback.rs  text_field_reader.rs  transcription.rs
(+66 files in other folders)
